--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -33,9 +33,9 @@ h2{
 section{
   position:relative;
   margin-top:0px;
-  margin-right:20px;
-  margin-left:20px;
-  margin-bottom:40px;
+  margin-right:10px;
+  margin-left:10px;
+  margin-bottom:20px;
   padding:50px 10px 10px 10px;
   border:1px solid black;
   background-color:#BDBDBD;
@@ -47,6 +47,7 @@ section{
 
 .container{
   position: relative;
+  margin:20px;
 }
 
 #h2-1{
