--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -11,17 +11,17 @@ body {
  }
 h1{
   margin-top:40px;
-  margin-bottom:60px;
+  margin-bottom:40px;
   text-align:center;
   font-size:175%;
 }
 h2{
   position:absolute;
+  right:0;
+  top:0;
   width:150px;
   max-width:100%;
   height:45px;
-  right:0;
-  top:0;
   padding:10px;
   border-top:1px hidden;
   border-right:1px hidden;
@@ -32,10 +32,6 @@ h2{
 }
 section{
   position:relative;
-  margin-top:0px;
-  margin-right:10px;
-  margin-left:10px;
-  margin-bottom:20px;
   padding:50px 10px 10px 10px;
   border:1px solid black;
   background-color:#BDBDBD;
@@ -45,10 +41,19 @@ section{
   width:100%;
 }
 
-.container{
+
+
+.container {
   position: relative;
   margin:10px;
 }
+
+#container{
+  position: relative;
+  margin:10px;
+}
+
+
 
 #h2-1{
   background-color:#F7BE81;
@@ -65,6 +70,7 @@ section{
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float:left;
+
   }
   .col-lg-1 {
     width: 8.33%;
@@ -186,5 +192,12 @@ section{
   }
   .col-sm-12 {
     width: 100%;
+  }
+  #container {
+    margin:20px;
+  }
+  h1{
+  margin-top: 10px;
+  margin-bottom:10px;
   }
 }
