--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -11,7 +11,7 @@ body {
  }
 h1{
   margin-top:40px;
-  margin-bottom:40px;
+  margin-bottom:60px;
   text-align:center;
   font-size:175%;
 }
@@ -43,12 +43,7 @@ section{
 
 
 
-.container {
-  position: relative;
-  margin:10px;
-}
-
-#container{
+.container{
   position: relative;
   margin:10px;
 }
@@ -151,6 +146,10 @@ section{
   .col-md-12 {
     width: 100%;
   }
+  h1{
+    margin-top: 40px;
+    margin-bottom:40px;
+  }
 }
 /********** Mobile devices only **********/
 @media (max-width: 767px) {
@@ -196,8 +195,12 @@ section{
   #container {
     margin:20px;
   }
+
+  body{
+    margin: 10px;
+  }
   h1{
-  margin-top: 10px;
-  margin-bottom:10px;
+  margin-top: 30px;
+  margin-bottom:20px;
   }
 }
