--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,41 +1,111 @@
 
-
 body {
   font-family:verdana;
   font-size:1em;
-}
-
+  border:0;
+  margin:0;
+  padding:0;
+  color:#000000;
+ }
 
 #header-nav{
   background-color:#BDBDBD;
-  border-radius: 0;
-  border:0;
-  align-items:left;
+  border-radius:0;
+  border:2px solid black;
  }
-
- .container{
-  width: 100%;
-  padding-right:5px;
-  padding-left: 5px;
-  padding-top: 10px;
-  padding-bottom:10px;
-  margin: 0;
-  }
 
 .navbar-brand{
   padding-top:5px;
-  padding-left: 0px;
+  padding-left:10px;
+  margin:0px;
 }
 
-.navbar-brand h1 {
+.navbar-brand h1{
   font-size: 1.8em;
   font-weight: bold;
-  margin-top: 0;
+  margin-top:0;
   margin-bottom:0;
-  color: #000000;
-  text-align: left;
+  margin-left:10px;
+  text-align:left;
+  color:#000000;
 }
 
 .navbar-brand a:hover,.navbar-brand a:focus {
 text-decoration: none;
+}
+
+#nav-list {
+  font-size:1.5em;
+  font-weight: bold;
+  background-color:#E6E6E6;
+  margin-top:0;
+  margin-bottom:0;
+}
+
+#nav-list a{
+  color:#000000;
+  border-top: 2px solid #000000;
+
+}
+  
+#nav-list a:hover{
+ background-color:#D8D8D8;
+}
+
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar a{
+border: 2px solid #000000;
+}
+
+
+section{
+  position: relative;
+  padding:10px 10px 10px 10px;
+  height: 1000px;
+  margin-bottom:20px;
+  background-color:#BDBDBD;
+  }
+
+h1{
+  margin-top:20px;
+  margin-bottom:30px;
+  font-size:2.5em;
+  font-weight: bold;
+ }
+
+h2{
+  margin-top:10px;
+  margin-bottom:10px;
+  font-size:2em;
+  font-weight: bold;
+}
+
+p{
+  font-size: 1.65em;
+}
+}
+
+@media (min-width: 1200px){
+}
+.container{
+width: 100%;
+}
+}
+@media (min-width: 992px) and (max-width: 1199px){
+.container{
+width: 100%;
+}
+}
+@media (min-width: 768px) and (max-width: 991px){
+.container{
+width: 100%;
+}
+} 
+@media (max-width: 767px){
+.junbontrom{
+  margin-left: 60px;
+  margin-right: 60px;
+}
+.container{
+width: 100%;
+}
 }
